[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://scenes/GUI_Player.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="NomJeuLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -266.5
margin_top = 30.0
margin_right = 266.5
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "Achtung, die Kurve !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.833
anchor_right = 0.5
anchor_bottom = 0.833
margin_left = -44.5
margin_top = -21.3
margin_right = 44.5
margin_bottom = 21.7
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI_Joueur_1" parent="." instance=ExtResource( 3 )]

[node name="GUI_Joueur_2" parent="." instance=ExtResource( 3 )]
offset = Vector2( 0, 100 )
transform = Transform2D( 1, 0, 0, 1, 0, 100 )

[node name="GUI_Joueur_3" parent="." instance=ExtResource( 3 )]
offset = Vector2( 0, 200 )
transform = Transform2D( 1, 0, 0, 1, 0, 200 )
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
